--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,7 @@
-file(GLOB_RECURSE EXAMPLE_TESTS "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
+file(GLOB_RECURSE DLFL_TESTS "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
 
-add_executable(unit_tests ${EXAMPLE_TESTS})
-target_link_libraries(unit_tests gtest gmock example)
+add_executable(unit_tests ${DLFL_TESTS})
+target_link_libraries(unit_tests gtest gmock dlfl)
 
 add_test(
   NAME
