--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 file(GLOB_RECURSE DLFL_TESTS "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
 
 add_executable(unit_tests ${DLFL_TESTS})
-target_link_libraries(unit_tests gtest gmock dlfl)
+target_link_libraries(unit_tests gtest gmock dlfl ${TBB_LIBS})
 
 add_test(
   NAME
