--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,9 @@ file(GLOB_RECURSE DLFL_TESTS "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
 
 add_executable(unit_tests ${DLFL_TESTS})
 target_link_libraries(unit_tests gtest gmock dlfl ${TBB_LIBS})
+if (MKL_FOUND)
+  target_link_libraries(unit_tests ${MKL_LIBRARIES})
+endif()
 
 add_test(
   NAME
