--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,15 +9,15 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})
 
-# we use this to get code coverage
-if(CMAKE_CXX_COMPILER_ID MATCHES GNU)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage")
-endif()
+set(CMAKE_MODULE_PATH
+  ${CMAKE_CURRENT_LIST_DIR}/cmake
+  ${CMAKE_MODULE_PATH}
+)
 
 include(cmake/tbb.cmake)
 fetch_tbb(${PROJECT_SOURCE_DIR}/cmake ${PROJECT_BINARY_DIR}/tbb)
 
-include(cmake/FindMKL.cmake)
+find_package(MKL)
 if (MKL_FOUND)
   add_definitions(-DHAS_MKL=1)
   include_directories(${MKL_INCLUDE_DIRS})
