--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,15 +4,15 @@ include(FindProtobuf)
 find_package(Protobuf REQUIRED)
 protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS "onnx.proto")
 
-set(LLVM_DIR "/usr/local/opt/llvm/lib/cmake/llvm")
-find_package(LLVM REQUIRED CONFIG)
+set(LLVM_DIR $ENV{LLVM_DIR})
+find_package(LLVM CONFIG)
+if (LLVM_FOUND)
+  message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
+  message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 
-message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
-message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
-
-include_directories(${LLVM_INCLUDE_DIRS})
-add_definitions(${LLVM_DEFINITIONS})
-llvm_map_components_to_libnames(llvm_libs
+  include_directories(${LLVM_INCLUDE_DIRS})
+  add_definitions(${LLVM_DEFINITIONS})
+  llvm_map_components_to_libnames(LLVM_LIBS
     Analysis
     Core
     ExecutionEngine
@@ -23,6 +23,7 @@ llvm_map_components_to_libnames(llvm_libs
     ScalarOpts
     Support
     native)
+endif()
 
 file(GLOB_RECURSE DLFL_SRCS "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
 file(GLOB_RECURSE DLFL_HDRS "${CMAKE_CURRENT_LIST_DIR}/*.h")
@@ -48,5 +49,5 @@ target_link_libraries(
   dlfl
   PRIVATE
     ${Protobuf_LIBRARIES}
-    ${llvm_libs}
+    ${LLVM_LIBS}
 )
