select default blas provider on macOS platform

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,18 @@ set(CMAKE_MODULE_PATH
 include(cmake/tbb.cmake)
 fetch_tbb(${PROJECT_SOURCE_DIR}/cmake ${PROJECT_BINARY_DIR}/tbb)
 
-find_package(MKL)
-if (MKL_FOUND)
+if(NOT(DEFINED USE_MKL))
+  if(APPLE)
+    set(USE_MKL NO)
+  else()
+    set(USE_MKL YES)
+  endif()
+endif()
+if(USE_MKL)
+  find_package(MKL)
+  set(USE_MKL ${MKL_FOUND})
+endif()
+if(USE_MKL)
   add_definitions(-DHAS_MKL=1)
   include_directories(${MKL_INCLUDE_DIRS})
 endif()
