--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,7 +2,7 @@ file(GLOB_RECURSE DLFL_TESTS "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
 add_executable(unit_tests ${DLFL_TESTS})
 target_link_libraries(unit_tests gtest gmock dlfl ${TBB_LIBS})
 
-if (MKL_FOUND)
+if (USE_MKL)
   target_link_libraries(unit_tests ${MKL_LIBRARIES})
 elseif (APPLE)
   set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -framework Accelerate")
