--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,8 @@ include_directories(${OpenCL_INCLUDE_DIRS})
 find_package(CUDA REQUIRED)
 find_cuda_helper_libs("cuda")
 find_cuda_helper_libs("nvrtc")
-set(CUDA_LIBRARIES ${CUDA_cuda_LIBRARY} ${CUDA_nvrtc_LIBRARY})
+find_cuda_helper_libs("cublas")
+set(CUDA_LIBRARIES ${CUDA_cuda_LIBRARY} ${CUDA_nvrtc_LIBRARY} ${CUDA_cublas_LIBRARY})
 include_directories(${CUDA_INCLUDE_DIRS})
 
 include(cmake/clblast.cmake)
