use docker to configure linux build environment

--- a/dlf/CMakeLists.txt
+++ b/dlf/CMakeLists.txt
@@ -1,24 +1,24 @@
-add_library(dlfl "")
+add_library(dlf "")
 
 find_package(Protobuf REQUIRED)
 protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS "onnx.proto")
 
-file(GLOB_RECURSE DLFL_SRCS "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
-file(GLOB_RECURSE DLFL_HDRS "${CMAKE_CURRENT_LIST_DIR}/*.h")
-file(GLOB_RECURSE DLFL_PRIVATE_HDRS "${CMAKE_CURRENT_LIST_DIR}/*.hpp")
+file(GLOB_RECURSE DLF_SRCS "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
+file(GLOB_RECURSE DLF_HDRS "${CMAKE_CURRENT_LIST_DIR}/*.h")
+file(GLOB_RECURSE DLF_PRIVATE_HDRS "${CMAKE_CURRENT_LIST_DIR}/*.hpp")
 
 target_sources(
-  dlfl
+  dlf
   PRIVATE
-    ${DLFL_SRCS}
-    ${DLFL_PRIVATE_HDRS}
+    ${DLF_SRCS}
+    ${DLF_PRIVATE_HDRS}
     ${PROTO_SRCS}
   PUBLIC
-    ${DLFL_HDRS}
+    ${DLF_HDRS}
 )
 
 target_include_directories(
-  dlfl
+  dlf
   PUBLIC
     ${CMAKE_CURRENT_LIST_DIR}
     ${CMAKE_CURRENT_BINARY_DIR}
@@ -26,7 +26,7 @@ target_include_directories(
 )
 
 target_link_libraries(
-  dlfl
+  dlf
   PRIVATE
     ${Protobuf_LIBRARIES}
     ${TBB_LIBRARIES}
