--- a/dlf/CMakeLists.txt
+++ b/dlf/CMakeLists.txt
@@ -1,11 +1,11 @@
 add_library(dlf "")
 
 find_package(Protobuf REQUIRED)
-protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS "onnx.proto")
+protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS "src/onnx.proto")
 
-file(GLOB_RECURSE DLF_SRCS "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
-file(GLOB_RECURSE DLF_HDRS "${CMAKE_CURRENT_LIST_DIR}/*.h")
-file(GLOB_RECURSE DLF_PRIVATE_HDRS "${CMAKE_CURRENT_LIST_DIR}/*.hpp")
+file(GLOB_RECURSE DLF_SRCS "${CMAKE_CURRENT_LIST_DIR}/src/*.cpp")
+file(GLOB_RECURSE DLF_HDRS "${CMAKE_CURRENT_LIST_DIR}/include/*.h")
+file(GLOB_RECURSE DLF_PRIVATE_HDRS "${CMAKE_CURRENT_LIST_DIR}/src/*.hpp")
 
 target_sources(
   dlf
@@ -20,7 +20,7 @@ target_sources(
 target_include_directories(
   dlf
   PUBLIC
-    ${CMAKE_CURRENT_LIST_DIR}
+    ${CMAKE_CURRENT_LIST_DIR}/include
     ${CMAKE_CURRENT_BINARY_DIR}
     ${Protobuf_INCLUDE_DIR}
 )
@@ -33,3 +33,10 @@ target_link_libraries(
     ${MKL_LIBRARIES}
     gpgpu
 )
+
+if(NOT DEFINED ENV{SKIP_TESTS})
+  include(${PROJECT_SOURCE_DIR}/cmake/googletest.cmake)
+  fetch_googletest(${PROJECT_SOURCE_DIR}/cmake ${PROJECT_BINARY_DIR}/googletest)
+  enable_testing()
+  add_subdirectory(test)
+endif()
