--- a/dlf/test/CMakeLists.txt
+++ b/dlf/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 file(GLOB_RECURSE DLF_TESTS "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
 add_executable(unit_tests ${DLF_TESTS})
-target_link_libraries(unit_tests gmock_main gpgpu dlf ${TBB_LIBRARIES} ${PROTOBUF_LIBRARIES})
+target_link_libraries(unit_tests gmock_main gpgpu dlf ${TBB_LIBRARIES})
 
 if (USE_MKL)
   target_link_libraries(unit_tests ${MKL_LIBRARIES})
@@ -13,6 +13,15 @@ if (GMP_FOUND)
   add_definitions(-DHAS_GMP=1)
   include_directories(${GMP_INCLUDES})
   target_link_libraries(unit_tests ${GMP_LIBRARIES})
+endif()
+
+set(TEST_FILE ${CMAKE_BINARY_DIR}/data/resnet18v1.onnx)
+if(NOT EXISTS ${TEST_FILE})
+  file(DOWNLOAD
+    https://s3.amazonaws.com/onnx-model-zoo/resnet/resnet18v1/resnet18v1.onnx
+    ${TEST_FILE}
+    SHOW_PROGRESS
+  )
 endif()
 
 add_test(
