add more optimizer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,3 +81,9 @@ if (HAS_OPENCV)
     target_link_libraries(imagenet ${MKL_LIBRARIES})
   endif()
 endif()
+
+add_executable(optimize optimize.cpp)
+target_link_libraries(optimize gpgpu dlf ${TBB_LIBRARIES} ${OpenCV_LIBS})
+if (USE_MKL)
+  target_link_libraries(optimize ${MKL_LIBRARIES})
+endif()
