--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,14 @@ if (HAS_OPENCV)
   endif()
 endif()
 
+if (HAS_OPENCV)
+  add_executable(mnist mnist.cpp)
+  target_link_libraries(mnist gpgpu dlf ${TBB_LIBRARIES} ${OpenCV_LIBS})
+  if (USE_MKL)
+    target_link_libraries(mnist ${MKL_LIBRARIES})
+  endif()
+endif()
+
 add_executable(optimize optimize.cpp)
 target_link_libraries(optimize gpgpu dlf ${TBB_LIBRARIES} ${OpenCV_LIBS})
 if (USE_MKL)
