--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.1)
 
 project(DLF C CXX)
-if("$ENV{CUDA_VERSION}" STREQUAL "8.0")
+if("$ENV{CUDA_VERSION}" STREQUAL "8.0" OR "$ENV{CUDA_VERSION}" STREQUAL "9.0")
   set(CMAKE_CXX_STANDARD 14)
 else()
   set(CMAKE_CXX_STANDARD 17)
