adapt vector mathematical functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,9 @@ endif()
 if(USE_MKL)
   add_definitions(-DHAS_MKL=1)
   include_directories(${MKL_INCLUDE_DIRS})
+  set(BLAS_LIBRARY ${MKL_LIBRARIES})
+elseif(APPLE)
+  find_library(BLAS_LIBRARY Accelerate)
 endif()
 
 # OpenCV
@@ -70,32 +73,17 @@ include_directories(${gpgpu_SOURCE_DIR}/include ${gpgpu_SOURCE_DIR}/src)
 add_subdirectory(dlf)
 
 add_executable(demo main.cpp)
-target_link_libraries(demo gpgpu dlf ${TBB_LIBRARIES})
-
-if (USE_MKL)
-  target_link_libraries(demo ${MKL_LIBRARIES})
-elseif (APPLE)
-  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -framework Accelerate")
-endif()
+target_link_libraries(demo gpgpu dlf ${TBB_LIBRARIES} ${BLAS_LIBRARY})
 
 if (HAS_OPENCV)
   add_executable(imagenet imagenet.cpp)
-  target_link_libraries(imagenet gpgpu dlf ${TBB_LIBRARIES} ${OpenCV_LIBS})
-  if (USE_MKL)
-    target_link_libraries(imagenet ${MKL_LIBRARIES})
-  endif()
+  target_link_libraries(imagenet gpgpu dlf ${TBB_LIBRARIES} ${BLAS_LIBRARY} ${OpenCV_LIBS})
 endif()
 
 if (HAS_OPENCV)
   add_executable(mnist mnist.cpp)
-  target_link_libraries(mnist gpgpu dlf ${TBB_LIBRARIES} ${OpenCV_LIBS})
-  if (USE_MKL)
-    target_link_libraries(mnist ${MKL_LIBRARIES})
-  endif()
+  target_link_libraries(mnist gpgpu dlf ${TBB_LIBRARIES} ${BLAS_LIBRARY} ${OpenCV_LIBS})
 endif()
 
 add_executable(optimize optimize.cpp)
-target_link_libraries(optimize gpgpu dlf ${TBB_LIBRARIES} ${OpenCV_LIBS})
-if (USE_MKL)
-  target_link_libraries(optimize ${MKL_LIBRARIES})
-endif()
+target_link_libraries(optimize gpgpu dlf ${TBB_LIBRARIES} ${BLAS_LIBRARY})
