--- a/gpgpu/CMakeLists.txt
+++ b/gpgpu/CMakeLists.txt
@@ -157,7 +157,7 @@ set(LEVEL1_ROUTINES xswap xscal xcopy xaxpy xdot xdotu xdotc xnrm2 xasum xamax)
 set(LEVEL2_ROUTINES xgemv xgbmv xhemv xhbmv xhpmv xsymv xsbmv xspmv xtrmv xtbmv xtpmv xtrsv
                     xger xgeru xgerc xher xhpr xher2 xhpr2 xsyr xspr xsyr2 xspr2)
 set(LEVEL3_ROUTINES xgemm xsymm xhemm xsyrk xherk xsyr2k xher2k xtrmm xtrsm)
-set(LEVELX_ROUTINES xhad xomatcopy xim2col xcol2im xconvgemm xaxpybatched xgemmbatched xgemmstridedbatched)
+set(LEVELX_ROUTINES xhad xomatcopy xim2col xcol2im xconvgemm xaxpybatched xgemmbatched xgemmstridedbatched xgetrf)
 set(DNN_ROUTINES xcopy xfill xreverse xrange xrandom xtransform xtransform_p xtransform_b xreduce xscan
                  xmerge xsort xargsort xtopk xargreduce xnorm xpool xsoftmax xhardmax xwhere
                  xonehot xgather xresize)
