--- a/gpgpu/CMakeLists.txt
+++ b/gpgpu/CMakeLists.txt
@@ -158,9 +158,9 @@ set(DATABASES copy pad padtranspose transpose xaxpy xdot
               xgemm xgemm_direct xgemv xgemv_fast xgemv_fast_rot xger invert
               gemm_routine trsv_routine)
 set(ROUTINE_TUNERS xgemm xtrsv)
-set(LEVEL1_ROUTINES xswap xscal xcopy xaxpy xdot xdotu xdotc xnrm2 xasum xamax)
+set(LEVEL1_ROUTINES xswap xscal xcopy xaxpy xdot xnrm2 xasum xamax)
 set(LEVEL2_ROUTINES xgemv xgbmv xhemv xhbmv xhpmv xsymv xsbmv xspmv xtrmv xtbmv xtpmv xtrsv
-                    xger xgeru xgerc xher xhpr xher2 xhpr2 xsyr xspr xsyr2 xspr2)
+                    xger xgerc xher xhpr xher2 xhpr2 xsyr xspr xsyr2 xspr2)
 set(LEVEL3_ROUTINES xgemm xsymm xhemm xsyrk xherk xsyr2k xher2k xtrmm xtrsm)
 set(LEVELX_ROUTINES xhad xomatcopy xim2col xcol2im xconvgemm xaxpybatched xgemmbatched xgemmstridedbatched xgetrf)
 set(DNN_ROUTINES xcopy xfill xreverse xrange xrandom xtransform xtransform_p xtransform_b xreduce xscan
